--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 <body>
 
     <div id="app">
-        
+        <h1>TO DO LIST ✅</h1>
+
+        <input type="text" placeholder="Aggiungi un'attività">
+        <button>Add</button>
+
+        <ul id="taskList">
+            <li v-for="(task, i) in taskList">
+                {{task}}
+            </li>
+            
+        </ul>
     </div>
 
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
